syntax = "proto3";

package catalog.v1;

option go_package = "codegen/api/protos/catalog/v1;catalogv1";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message Product {
  string id = 1;
  int32 brand_id = 2;
  string name = 3;
  optional string sku = 4;
  optional string summary = 5;
  optional string storyline = 6;
  int32 stock = 7;
  float price = 8;
  google.protobuf.Timestamp created_at = 9;
}

message ListProductsRequest { 
  int32 limit = 1;
  int32 offset = 2;
}

message ListProductsResponse { 
  int32 total = 1;
  repeated Product items = 2;
}

message GetProductRequest {
  string id = 1;
}

message CreateProductRequest { 
  int32 brand_id = 1;
  string name = 2;
  optional string sku = 3;
  optional string summary = 4;
  optional string storyline = 5;
  int32 stock = 6;
  float price = 7;
}

message UpdateProductRequest { 
  string id = 1;
  int32 brand_id = 2;
  string name = 3;
  optional string sku = 4;
  optional string summary = 5;
  optional string storyline = 6;
  int32 stock = 7;
  float price = 8;
}

message DeleteProductRequest {
  string id = 1;
}

service ProductService {
  rpc List(ListProductsRequest) returns (ListProductsResponse);
  rpc Get(GetProductRequest) returns (Product);  
  rpc Create(CreateProductRequest) returns (Product);  
  rpc Update(UpdateProductRequest) returns (Product);
  rpc Delete(DeleteProductRequest) returns (google.protobuf.Empty);
}
